--- a/Magento_Checkout/web/css/source/module/checkout/_progress-bar.less
+++ b/Magento_Checkout/web/css/source/module/checkout/_progress-bar.less
@@ -54,6 +54,7 @@
         counter-reset: i;
         display: block;
         font-size: 0;
+        text-align: center;
     }
 
     .opc-progress-bar-item {
