--- a/Magento_Customer/web/css/source/_module.less
+++ b/Magento_Customer/web/css/source/_module.less
@@ -281,11 +281,13 @@
 .media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__m) {
 
     // Customised by 23702
-
+        .gift-options .actions-toolbar .secondary{
+            width: auto;
+        }
         .actions-toolbar .primary, .actions-toolbar .secondary {
             display: block;
             text-align: left;
-            width: auto;
+            width: 100%;
         }
         .actions-toolbar .primary{
             text-transform:uppercase;
@@ -499,7 +501,7 @@
         .actions-toolbar .primary, .actions-toolbar .secondary {
             display: block;
             text-align: left;
-            width: auto;
+            width: 100%;
         }
         .actions-toolbar .primary{
             text-transform:uppercase;
