--- a/web/css/source/_navigation.less
+++ b/web/css/source/_navigation.less
@@ -211,7 +211,7 @@
 
         &-item-title {
             background: transparent;
-            border: solid darken(@navigation__background,10%);
+            //border: solid darken(@navigation__background,10%);
             border-width: 0 0 1px 1px;
             box-sizing: border-box;
             float: left;
